# helmet-for-pretrain

./: arguments.py  data.py  eval.py  model_utils.py  pyproject.toml  run_64_and_128.sh  visualize_server.py
configs/: recall_chinese_poem.yaml  recall_chinese_poem_balanced.yaml
scripts/: chinese_poem_eval.sh  collect_results.py  pretrain_eval.sh  pretrain_eval_128k.sh
