[project]
name = "helmet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.6.0",
    "decord>=0.6.0",
    "flask>=3.1.2",
    "moviepy>=1.0.3",
    "openai>=2.3.0",
    "pillow>=12.0.0",
    "protobuf>=6.33.0",
    "pytrec-eval>=0.5",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "transformers>=4.57.1",
]
